# openUC2_XIAO_Microscope_Webcam

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  pytest_XIAO_Webcam.py  sdkconfig.defaults
.github/workflows/: buildMergedBinary.yml  buildNergedBinary.yml  ci_cd.yml
bootloader_components/boot_hooks/: boot_hooks.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  usb_webcam_main.c
